--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Hello
+Simple Documentation of an unblocked site directory for CPHS. Documented for nostalgic reasons only. No links are maintained or tested.
