--- a/README
+++ b/README
@@ -1,1 +1,15 @@
-Simple Documentation of an unblocked site directory for CPHS. Documented for nostalgic reasons only. No links are maintained or tested.
+Simple documentation of how bored I was at CPJH/CPHS. Documented for nostalgic reasons only. No links are maintained or tested. 
+  Project 5: Counting Boredom(SELF EXPLANATORY) 
+      https://docs.google.com/document/d/1N3hj8K9bO3YStDIHWNn07U85Lul6E1_RVi3W1Z3vIZk/edit?usp=sharing
+  Project 7(Backup): Unblocked Link Directory (Cannot Find Finished Original)
+      https://docs.google.com/document/d/1_CHbw0UghsWXrAhgYezmAtYw8GO6lu0r8cbJUmg_F14/edit?usp=sharing
+  RL: Random Link Directory
+      https://docs.google.com/document/d/1rfHe2zemWPfEV0Kfv2--ae79r7eo7rvwlY9D5eWR8kM/edit?usp=sharing
+  PasteBin: Emoji Copy Bin for Chromebooks
+      https://docs.google.com/document/d/1bz9gbQXgeyvn8hO0Mflw0mPFKDw88Gy4y8xRVgzhARI/edit?usp=sharing
+  LockBox I: Experimental Meme Decoder in google docs
+      https://docs.google.com/document/d/1zvKJw_by1z35PJCuMnAUNptkOybSetlTHgDChHuk-uw/edit?usp=sharing
+  LockBox II: Experimental Information Decoder in google docs
+      https://docs.google.com/document/d/1KVeJlHVdY8vO4_CrC0aw1o02jv2ewl1HlKAcJkGuptM/edit?usp=sharing
+  Project 8: Supposed to be the holy grail of an unblocked link directory
+      https://docs.google.com/document/d/19tdj7TR1hZoXi-AGBQ0VSa2DjI8zuOSGd-smf53sJYI/edit?usp=sharing
